Fix pylint and mypy errors. Fix pyproject config for mypy.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ Homepage = "https://github.com/krr-up/aspen.git/"
 
 [project.optional-dependencies]
 format = ["black", "isort", "autoflake"]
-lint_pylint = ["pylint"]
+lint_pylint = ["pylint", "aspen[test]"]
 typecheck = ["types-setuptools", "mypy"]
 test = ["coverage[toml]", "tree-sitter-clingo"]
 doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mkdoclingo"]
@@ -76,3 +76,13 @@ omit = ["*/aspen/__main__.py"]
 
 [tool.coverage.report]
 exclude_lines = ["assert", "nocoverage"]
+
+[tool.mypy]
+exclude = ["tests/*", "noxfile.py", "init.py"]
+strict = true
+
+[tool.pylsp-mypy]
+enabled = true
+live_mode = true
+exclude = ["tests/*", "noxfile.py", "init.py"]
+strict = true
