Convert to clingo 5.
Disable failing python 3.9 tests due to tree-sitter-clingo req.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: run CI test
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, clingo-5]
   pull_request:
   workflow_call:
 
