Add metasp test suite.
This test suite contains some more advanced uses of aspen which are
needed for the metasp system.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: run CI test
 
 on:
   push:
-    branches: [main, master, clingo-5]
+    branches: [main, master, clingo-5, metasp-fixed]
   pull_request:
   workflow_call:
 
