--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: run CI test
 
 on:
   push:
-    branches: [main, master, clingo-5, metasp-fixed]
+    branches: [main, master, clingo-5, metasp]
   pull_request:
   workflow_call:
 
