Switch to published metasp grammar tree-sitter-metasp.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ Homepage = "https://github.com/krr-up/aspen.git/"
 [project.optional-dependencies]
 format = ["black", "isort", "autoflake"]
 lint_pylint = ["pylint", "aspen[test]"]
-typecheck = ["types-setuptools", "mypy", "tree-sitter-clingo @ git+https://github.com/namcsi/tree-sitter-clingo.git@metasp"]
-test = ["coverage[toml]", "tree-sitter-clingo @ git+https://github.com/namcsi/tree-sitter-clingo.git@metasp"]
+typecheck = ["types-setuptools", "mypy", "tree-sitter-metasp", "tree-sitter-clingo"]
+test = ["coverage[toml]", "tree-sitter-clingo", "tree-sitter-metasp"]
 doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mkdoclingo"]
 lsp = ["python-lsp-server", "rope", "pylsp-mypy", "pylsp-rope", "python-lsp-black"]
 dev = ["aspen[test,typecheck,lint_pylint,lsp]"]
