--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -3,6 +3,9 @@ name: Publish Python distribution to PyPI and TestPyPI
 on:
   workflow_dispatch:
   push:
+    branches:
+      - main
+      - clingo-5
 
 jobs:
   test:
