--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "aspen"
+name = "aspen-tree"
 authors = [{ name = "Amadé Nemes", email = "nemesamade@gmail.com" }]
 description = "aspen is a tool for analyzing and manipulating ASTs in the clingo ASP language, powered by tree-sitter."
 requires-python = ">=3.9"
