--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -46,9 +46,8 @@ jobs:
         path: dist/
 
   publish-to-pypi:
-    name: >-
-      Publish Python distribution to PyPI
-    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+    name: Publish Python distribution to PyPI
+    if: startsWith(github.ref, 'refs/tags/v')  # only publish to PyPI on version tag pushes
     needs:
     - build
     runs-on: ubuntu-latest
@@ -70,6 +69,7 @@ jobs:
 
   publish-to-testpypi:
     name: Publish Python  distribution to TestPyPI
+    if: startsWith(github.ref, 'refs/tags/rc')  # only publish to PyPI on release candidate tag pushes
     needs:
     - build
     runs-on: ubuntu-latest
