--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,18 +1,11 @@
 name: Publish Python distribution to PyPI and TestPyPI
 
-env:
-  CLINGO_VERSION: |-
-    ${{ case(
-      startsWith(github.ref_name, 'clingo-5'), 5,
-      6
-    ) }}
-
 on:
   workflow_dispatch:
   push:
-    branches:
-      - clingo-5
-      - main
+    tags:
+      - '[0-9].[0-9].[0-9]'
+      - '[0-9].[0-9].[0-9]rc[0-9]'
 
 jobs:
   test:
@@ -47,7 +40,7 @@ jobs:
 
   publish-to-pypi:
     name: Publish Python distribution to PyPI
-    if: startsWith(github.ref, 'refs/tags/v')  # only publish to PyPI on version tag pushes
+    if: ${{ !contains(github.ref_name, 'rc') }} # only publish to PyPI on non release candidate tag pushes
     needs:
     - build
     runs-on: ubuntu-latest
@@ -69,7 +62,7 @@ jobs:
 
   publish-to-testpypi:
     name: Publish Python  distribution to TestPyPI
-    if: startsWith(github.ref, 'refs/tags/rc')  # only publish to PyPI on release candidate tag pushes
+    if: contains(github.ref_name, 'rc')  # only publish to TestPyPI on release candidate tag pushes
     needs:
     - build
     runs-on: ubuntu-latest
